# kul-anndl-ss24

./: .gitignore  .pdm-python  20232024_UseofGenAI_Codeofconduct.docx  Pipfile  README.md  pyproject.toml
Exercise2/: hopfield.ipynb  time_series.ipynb
ex1/: mnist_optimizers.pkl  noise_level.pkl  session1.ipynb
ex2/: hopfield.ipynb  time_series.ipynb
ex3/: acc_count.pkl  ae_sae.ipynb  attention.ipynb  cnn.ipynb  results.pkl  results_kaggle.pkl
ex3/models/: sae_model.pt
ex3/models/MNIST_CNN/: ckpt.pth
ex4/: dbm.ipynb  gan.ipynb  gan_mnist.pkl  rbm.ipynb  rbm_likelihoods.pkl  vae.ipynb
ex4/boltzmann_machines/: dbm.py  layers.py
ex4/boltzmann_machines/base/: mixin.py  tf_model.py
ex4/boltzmann_machines/rbm/: base_rbm.py  rbm.py
ex4/boltzmann_machines/utils/: stopwatch.py  utils.py
ex4/models/dbm_mnist_rbm1/: model
report/: main.bib  main.tex
report/exercises/: ex1.tex  ex2.tex  ex3.tex  ex4.tex
reports/ex1/: session1.ipynb
reports/ex2/: time_series.ipynb
reports/report/: main.bib  main.tex
