[project]
name = "kul-anndl-ss24"
version = "0.1.0"
authors = [{ name = "Marco Bischoff", email = "m.bischoff@fz-juelich.de" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "keras",
    "scipy",
    "scikit-learn",
    "ipykernel",
    "ipywidgets",
    "ipympl",
    "widgetsnbextension",
    "pandas",
    "torch",
    "torchvision",
    "torchaudio",
    "keras-core",
    "tensorflow",
    "tensorflow-io-gcs-filesystem",
    "torch-directml",
]
readme = "README.md"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = []
