[project]
name = "kul-anndl-ss24"
version = "0.1.0"
authors = [{ name = "Marco Bischoff", email = "bischoff_m@aim.com" }]
requires-python = ">=3.9,<3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "keras",
    "scipy",
    "scikit-learn",
    "ipykernel",
    "ipywidgets",
    "ipympl",
    "widgetsnbextension",
    "pandas",
    "torch",
    "torchvision",
    "torchaudio",
    "keras-core",
    "tensorflow>=2.10.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tqdm>=4.66.4",
    "einops>=0.8.0",
    "seaborn>=0.13.2",
    "tensorflow-probability<=0.23.0",
    "nose>=1.3.7",
]
readme = "README.md"


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = []
